fix:adf